[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Statue.gd" type="Script" id=1]
[ext_resource path="res://Animations/Statue Animations/Attack.anim" type="Animation" id=2]
[ext_resource path="res://Animations/Swalk.tres" type="Animation" id=3]
[ext_resource path="res://Image_Imports/statue spritesheet.png" type="Texture" id=4]
[ext_resource path="res://Animations/Statue Animations/dead.anim" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 28.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Area2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -1271.1, 4.51749, -1352.92, 11.8508, -1329.54, 21.6286, -1399.67, 30.1842, -1329.54, 39.962, -1352.92, 77.851, -1142.54, 76.6287, -1119.16, 33.8509, -1037.35, 0.850815, -1154.23, 0.850815 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 25.0
height = 34.0

[node name="Statue" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 8
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 3 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 14, -10 )
enabled = true
collision_mask = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../floor_checker")
anims/Attack = ExtResource( 2 )
anims/RESET = SubResource( 2 )
anims/Swalk = ExtResource( 3 )
anims/dead = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 106.755, -30.6961 )
scale = Vector2( 0.0855593, 0.81818 )
build_mode = 1
polygon = PoolVector2Array( -1271.1, 4.51749, -1352.92, 11.8508, -1329.54, 21.6286, -1399.67, 30.1842, -1329.54, 39.962, -1352.92, 77.851, -1142.54, 76.6287, -1119.16, 33.8509, -1037.35, 0.850815, -1154.23, 0.850815 )

[node name="AttackRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
position = Vector2( 4, 3 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
